// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text color tokens pins v0 Text color tokens 1`] = `
{
  "_overrides": {
    "disabled": {
      "tokens": {
        "color": {
          "semantic": [
            "tertiaryLabelColor",
          ],
        },
      },
    },
  },
  "tokens": {
    "color": {
      "semantic": [
        "labelColor",
      ],
    },
  },
}
`;

exports[`Text color tokens pins v1 Text color tokens 1`] = `
{
  "color": {
    "semantic": [
      "labelColor",
    ],
  },
}
`;
